--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,396 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+	margin: 0;
+}
+.weatherhome {
+	width: 100%;
+	min-height: 50vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.weathercontainer {
+	position: relative;
+	max-width: 800px;
+	margin: 0 auto;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-bottom: 15px;
+	padding-top: 15px;
+	width: 100%;
+}
+
+.page-wrapper .back-link {
+	display: inline-block;
+	text-decoration: none;
+	color: #4361ee;
+	font-weight: 600;
+	transition: all 0.3s ease;
+	margin-bottom: 15px;
+}
+.page-wrapper .back-link:hover {
+	opacity: 0.7;
+}
+.today {
+	background-color: #4361ee;
+	border-radius: 10px;
+	color: #fff;
+	margin-top: 20px;
+}
+.today__inner {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 30px 30px;
+}
+.today h1 {
+	margin-bottom: 0;
+	font-size: 2rem;
+}
+.today h2 {
+	font-size: 1.5rem;
+	margin-bottom: 15px;
+}
+.today h2:not(:last-child) {
+	margin-right: 15px;
+}
+.today h2 span:last-child {
+	margin-left: 10px;
+	font-size: 1.25rem;
+	opacity: 0.7;
+}
+.today__sun-times {
+	display: flex;
+}
+.today__sun-times > div:not(:last-child) {
+	margin-right: 20px;
+}
+.today__sun-times > div span {
+	display: block;
+}
+.today__sun-times > div span:first-child {
+	font-weight: 700;
+}
+.today__sun-times > div span:last-child {
+	font-weight: 300;
+}
+.today__right-content {
+	text-align: center;
+	margin-left: 20px;
+}
+.today__right-content h3 {
+	margin-bottom: 0;
+}
+.today__icon-wrapper {
+	width: 100px;
+	height: 100px;
+	overflow: hidden;
+	position: relative;
+	margin: 0 auto;
+}
+.today__icon-wrapper > div {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 140px !important;
+	height: 140px !important;
+	transform: translate(-50%, -50%);
+}
+.hourly {
+	margin-top: 20px;
+	padding-bottom: 10px;
+	overflow: auto;
+}
+.hourly__inner {
+	display: flex;
+}
+.hourly__box-wrapper {
+	flex-grow: 1;
+	flex-shrink: 1;
+	min-width: 120px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+.hourly__box-wrapper:first-child {
+	min-width: 110px;
+	padding-left: 0;
+}
+.hourly__box-wrapper:last-child {
+	min-width: 110px;
+	padding-right: 0;
+}
+.hourly__box {
+	text-align: center;
+	border-radius: 5px;
+	padding: 10px;
+	background-color: #5e60ce;
+	color: #fff;
+}
+.hourly__box img {
+	width: 100%;
+	max-width: 100px;
+}
+.hourly__box span {
+	display: block;
+}
+.hourly__time {
+	font-size: 1rem;
+	font-weight: 300;
+}
+.hourly__time--now {
+	font-weight: 600;
+}
+.weekly {
+	margin-top: 20px;
+}
+.weekly__title {
+	opacity: 0.9;
+	margin-bottom: 15px;
+	font-size: 2rem;
+}
+.weekly__title span {
+	font-weight: 300;
+}
+.weekly__card {
+	background-color: #22b0db;
+	border-radius: 10px;
+	color: #fff;
+}
+.weekly__card:not(:last-child) {
+	margin-bottom: 15px;
+}
+.weekly__inner {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px 20px;
+}
+.weekly__left-content {
+	display: flex;
+	align-items: center;
+	margin-left: -15px;
+	margin-right: -15px;
+}
+.weekly__left-content > div {
+	padding-left: 15px;
+	padding-right: 15px;
+}
+.weekly__left-content > div:first-child {
+	min-width: 161px;
+}
+.weekly__left-content h3 {
+	margin-bottom: 0;
+	font-size: 1.5rem;
+}
+.weekly__left-content h4 {
+	font-size: 1rem;
+	margin-bottom: 0;
+}
+.weekly__left-content h4:not(:last-child) {
+	margin-right: 15px;
+}
+.weekly__left-content h4 span:last-child {
+	margin-left: 10px;
+	font-size: 0.875rem;
+	opacity: 0.7;
+}
+.weekly__sun-times {
+	display: flex;
+}
+.weekly__sun-times > div:not(:last-child) {
+	margin-right: 20px;
+}
+.weekly__sun-times > div span {
+	display: block;
+}
+.weekly__sun-times > div span:first-child {
+	font-weight: 700;
+}
+.weekly__sun-times > div span:last-child {
+	font-weight: 300;
+}
+.weekly__right-content {
+	text-align: center;
+	margin-left: 20px;
+	min-width: 120px;
+}
+.weekly__right-content h5 {
+	font-size: 1rem;
+	margin-bottom: 0;
+}
+.weekly__icon-wrapper {
+	width: 60px;
+	height: 60px;
+	overflow: hidden;
+	position: relative;
+	margin: 0 auto;
+}
+.weekly__icon-wrapper > div {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 80px;
+	height: 80px;
+	transform: translate(-50%, -50%);
+}
+.search {
+	position: relative;
+}
+.search input {
+	width: 100%;
+	padding: 15px 15px;
+	border-radius: 10px;
+	border: 2px solid #4361ee;
+	font-size: 1.25rem;
+	color: #242424;
+	font-family: "Nunito", sans-serif;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	transition: all 0.3s ease;
+}
+.search input:focus {
+	outline: none;
+}
+.search ul {
+	position: absolute;
+	top: calc(100% + 10px);
+	width: 100%;
+	padding: 5px 15px;
+	margin: 0;
+	list-style: none;
+	border: 2px solid #4361ee;
+	border-radius: 10px;
+	z-index: 100;
+	background-color: #fff;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.search ul li:not(:last-child) {
+	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.search ul li a {
+	display: block;
+	text-decoration: none;
+	color: #242424;
+	font-weight: 600;
+	transition: all 0.3s ease;
+	width: 100%;
+	padding: 10px 0;
+}
+.search ul li a:hover {
+	color: #4361ee;
+}
+.search__no-results {
+	padding: 15px 0;
+}
+.places {
+	margin-top: 30px;
+}
+.places__row {
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -15px;
+	margin-right: -15px;
+}
+.places__box {
+	flex: 0 0 25%;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+.places__box a {
+	display: block;
+	width: 100%;
+	position: relative;
+	text-decoration: none;
+}
+.places__box a:hover span {
+	opacity: 1;
+}
+.places__box a:hover img {
+	opacity: 0.8;
+}
+.places__box a span {
+	text-decoration: none;
+	font-weight: 700;
+	color: #242424;
+	font-size: 1.25rem;
+	opacity: 0.9;
+	transition: all 0.3s ease;
+}
+.places__image-wrapper {
+	position: relative;
+	padding-bottom: 125%;
+	border-radius: 10px;
+	overflow: hidden;
+	margin-bottom: 10px;
+}
+.places__image-wrapper img {
+	transition: all 0.3s ease;
+}
+#nprogress {
+	pointer-events: none;
+}
+#nprogress .bar {
+	background: #4361ee;
+	position: fixed;
+	z-index: 1031;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 4px;
+}
+/* Fancy blur effect */
+#nprogress .peg {
+	display: block;
+	position: absolute;
+	right: 0px;
+	width: 100px;
+	height: 100%;
+	opacity: 1;
+	-webkit-transform: rotate(3deg) translate(0px, -4px);
+	-ms-transform: rotate(3deg) translate(0px, -4px);
+	transform: rotate(3deg) translate(0px, -4px);
+}
+/* Remove these to get rid of the spinner */
+#nprogress .spinner {
+	display: block;
+	position: fixed;
+	z-index: 1031;
+	top: 15px;
+	right: 15px;
+}
+#nprogress .spinner-icon {
+	width: 18px;
+	height: 18px;
+	box-sizing: border-box;
+	border: solid 2px transparent;
+	border-top-color: #4361ee;
+	border-left-color: #4361ee;
+	border-radius: 50%;
+	-webkit-animation: nprogress-spinner 400ms linear infinite;
+	animation: nprogress-spinner 400ms linear infinite;
+}
+.nprogress-custom-parent {
+	overflow: hidden;
+	position: relative;
+}
+.nprogress-custom-parent #nprogress .spinner, .nprogress-custom-parent #nprogress .bar {
+	position: absolute;
+}
+@-webkit-keyframes nprogress-spinner {
+	0% {
+		-webkit-transform: rotate(0deg);
+   }
+	100% {
+		-webkit-transform: rotate(360deg);
+   }
+}
+@keyframes nprogress-spinner {
+	0% {
+		transform: rotate(0deg);
+   }
+	100% {
+		transform: rotate(360deg);
+   }
+}
+ 
