--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,71 @@
 @tailwind utilities;
 body {
 	margin: 0;
+	background-color: #29292D;
 }
+
+/*home page */
+.homecontainer {
+	padding: 50px;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
+.homecard {
+	position: relative;
+	background-size: cover;
+	background-repeat: no-repeat;
+	width: 500px;
+	height: 250px;
+	transition: transform 200ms ease;
+	border-radius: 10px;
+	z-index: 1;
+	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+	background-position: center;
+}
+.homecard::after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(0deg, #00000088 10%, #ffffff44 90%);
+	border-radius: 10px;
+}
+.text {
+	position: absolute;
+	overflow: hidden;
+	color: white;
+	top: 11em;
+	right: 9.7em;
+	font-weight: 700;
+	font-size: 1rem;
+	cursor: pointer;
+	line-height: 20px;
+	font-family: 'Poppins', sans-serif;
+	transition: all 200ms ease;
+	z-index: 100;
+	filter: drop-shadow(3px 3px 4px rgba(0, 0, 0, 0.4));
+}
+.homecard:hover {
+	transform: scale(0.98) translateY(-7%);
+	filter: blur(0.3px); 
+	cursor: pointer;
+}
+.homecard:hover p {
+	position: absolute;
+	z-index: 100;
+	right: 8.2em; 
+	transform: translateY(-5%);
+	filter: none;
+	letter-spacing: 3px;
+}
+
+
+/* weather page */
 .weatherhome {
 	width: 100%;
 	min-height: 50vh;
@@ -339,7 +403,6 @@ body {
 	width: 100%;
 	height: 4px;
 }
-/* Fancy blur effect */
 #nprogress .peg {
 	display: block;
 	position: absolute;
@@ -351,7 +414,6 @@ body {
 	-ms-transform: rotate(3deg) translate(0px, -4px);
 	transform: rotate(3deg) translate(0px, -4px);
 }
-/* Remove these to get rid of the spinner */
 #nprogress .spinner {
 	display: block;
 	position: fixed;
